Version 0.10
* Rework thread synchronization.
* Move espeak/espeak-ng audio queuing to shared file, rework it.
* Make baratinoo use this audio queueing, enable marks, and support
responsiveness parameter.
* Add support for Baratinoo engine 8.6
* Show mark progression in spd-say.
* Add --character option to spd-say.
* Put country/region in language instead of variant.
* pico, generic: fix setting voice by language.
* generic: Add fallback voices for generic languages.
* symbols: Add support for SSML.
* symbols: Add SymbolPreprocFile directive to load several symbol files.
* symbols: Replace DefaultSymbolsPreproc directive with SymbolsPreproc directive
to have more fine-grained control over server preprocessing.
* symbols: Import emojis and unicode font variants support from NVDA and Unicode
CLDR and UnicodeData.
* symbols: Import some symbols from Orca.
* symbols: Add rules to drop gender-neutral forms.
* Disable Mary-TTS module by default.
* Replace AudioPulseServer option with AudioPulseDevice.
* Fix default pulse latency to 10ms to avoid pulseaudio distorted output.

Version 0.9.1
* Add module for the non-free IBM TTS (voxin) speech synthesis.
* Extend licence to later versions of GPL and LGPL.
* Update mailing list address to savannah.
* Make generic modules fallback to existing voices.

Version 0.9
* Add modules for non-free Baratinoo (VoxyGen) and Kali speech syntheses.
* Add configuration file for the Mary-TTS system.
* Add configuration file for espeak-ng + mbrola.
* Set the pulse client name when using the generic module with paplay.
* espeak-*-mbrola-generic: Update voice list.
* Auto-detect module availability.
* Make generic module provide voice list.
* Add systemd service file.

Version 0.8.8
* Add German translation, thanks to Chris Leick for the patch
* Fix some spelling mistakes, thanks to Paul Gevers for the patch
* Some slight code improvements

Version 0.8.7
* Further fixes to spd-conf, which should now work properly.