@@ -30,6 +30,7 @@ GenericCmdDependency "pico2wave"
  
 GenericPunctNone ""
 GenericPunctSome "--punct=\"()[]{};:\""
+GenericPunctMost "--punct=\"()[]{};:\""
 GenericPunctAll "--punct"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
@@ -100,7 +101,7 @@ AddVoice        "it"       "MALE1"	"it-IT"
 Debug 0
 
 
-# Copyright (C) 2014-2019 Samuel Thibault <samuel.thibault@ens-lyon.org>
+# Copyright (C) 2014-2020 Samuel Thibault <samuel.thibault@ens-lyon.org>
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
